# auto-job-agent

./: .env.example  .gitignore  README.md  pyproject.toml
config/: config.example.yaml  resume.example.json
docs/: architecture.drawio
src/: main.py  pipeline.py  scheduler.py
src/models/: schemas.py
src/notifications/: email_sender.py  telegram_bot.py
src/scoring/: embedding.py  keyword.py  llm_scorer.py  pipeline.py
src/sources/: base.py  jobspy_source.py  jsearch_source.py
src/storage/: database.py
src/tailoring/: pdf_generator.py  referral.py  resume_tailor.py
templates/: email_digest.html  resume.html
tests/: test_scoring.py
