[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jobspy>=0.31.0",
    "anthropic>=0.40.0",
    "sentence-transformers>=3.0.0",
    "python-telegram-bot>=21.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "apscheduler>=3.10",
    "jinja2>=3.1",
    "weasyprint>=62.0",
    "python-dotenv>=1.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.0",
    "httpx>=0.27",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
